--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
+    "ngx-slick-carousel": "^17.0.0",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.1",
+    "tailwindcss-animated": "^1.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
